[tool.poetry]
name = "market-close-report"
version = "0.1.0"
description = ""
authors = ["felipesilvaibi <felipe_ibirama@hotmail.com>"]
readme = "README.md"
packages = [{include = "market_close_report"}]

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
yfinance = "^0.2.14"
matplotlib = "^3.7.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"